--- a/ShoppingCart.Core/ShoppingCart.Core.csproj
+++ b/ShoppingCart.Core/ShoppingCart.Core.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartItem.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="Interfaces\IProductRepository.cs" />
     <Compile Include="Interfaces\IProductService.cs" />
+    <Compile Include="Interfaces\IShoppingCartRepository.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
