--- a/ShoppingCart.Core/ShoppingCart.Core.csproj
+++ b/ShoppingCart.Core/ShoppingCart.Core.csproj
@@ -42,13 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\Repository\IOrderRepository.cs" />
+    <Compile Include="Interfaces\Service\IOrderService.cs" />
     <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Interfaces\Repository\IProductRepository.cs" />
     <Compile Include="Interfaces\Service\IProductService.cs" />
     <Compile Include="Interfaces\Repository\IShopingCartRepository.cs" />
     <Compile Include="Interfaces\Service\IShopingCartService.cs" />
+    <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShopingCartService.cs" />
