--- a/ShoppingCart.Infrastructure/ShoppingCart.Infrastructure.csproj
+++ b/ShoppingCart.Infrastructure/ShoppingCart.Infrastructure.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderRepository.cs" />
     <Compile Include="ProductContext.cs" />
     <Compile Include="ProductInitalizeDB.cs" />
     <Compile Include="ProductRepository.cs" />
